test/should_fail/inh_005.grg
actions inh_005 using inh_model_005;

rule bla { pattern{} replace{} }
